# ns-emu-cheats-downloader

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yaml
data/resources/: resources.gresource.xml
data/resources/ui/: window.blp
src/: cheat_provider.rs  curl_helper.rs  main.rs  tinfoil.rs  utils.rs
src/cheat_provider/: blawar.rs  chansey.rs  cheatslips.rs  gbatemp.rs  github.rs  hamlet.rs  ibnux.rs  mod.rs  tinfoil.rs
src/tinfoil_title_object/: imp.rs  mod.rs
src/window/: imp.rs  mod.rs
