[package]
name = "ns-emu-cheats-downloader"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/exefer/ns-emu-cheats-downloader"
license = "GPL-3.0"

[dependencies]
anyhow = "1.0.100"
curl = "0.4.49"
gtk = { package = "gtk4", version = "0.10.3", features = ["v4_20"] }
rand = "0.9.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"

[build-dependencies]
glib-build-tools = "0.21.0"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
