[package]
name = "ns-emu-cheats-downloader"
version = "0.1.2"
edition = "2024"
description = "A graphical user interface for downloading cheats for Switch emulators"
repository = "https://github.com/exefer/ns-emu-cheats-downloader"
license = "GPL-3.0-or-later"
publish = false

[dependencies]
anyhow = "1.0.100"
curl = "0.4.49"
curl-sys = "0.4.83"
eframe = { version = "0.33.3", default-features = false, features = [
  "default_fonts",
  "glow",
  "wayland",
  "x11"
] }
egui_extras = { version = "0.33.3", default-features = false, features = [
  "image"
] }
image = { version = "0.25.9", default-features = false, features = ["jpeg"] }
rfd = "0.16.0"
scraper = "0.25.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.146"

[profile.release]
opt-level = "s"
strip = true
lto = true
panic = "abort"
codegen-units = 1
